<resources>
    <string name="app_name">Parliament Members App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="link">
        <a href="https://avoindata.eduskunta.fi/#/fi/home"> Eduskunta Official Website</a>
    </string>
    <string name="app_version">App version: 1.0.0</string>
    <string name="parliament_members_application">Parliament Members Application</string>
    <string name="todo">TODO</string>
    <string name="list_of_parties">List of parties</string>
    <string name="about">About</string>
    <string name="hetekaid_icon">HetekaId icon</string>
    <string name="seat_number">Seat number:</string>
    <string name="heteka_id">Heteka ID:</string>
    <string name="thumbs_down_icon">Thumbs down icon</string>
    <string name="thumbs_up_icon">Thumbs up icon</string>
    <string name="party">Party:</string>
    <string name="party_icon">Party icon</string>
    <string name="seat_number_icon">Seat number icon</string>
    <string name="enter_comments">Enter comments</string>
    <string name="submit">Submit</string>
    <string name="show_my_recent_comments">Show my recent comments</string>
    <string name="party_name">Party name</string>
    <string name="parliament_of_finland_logo">Parliament of Finland logo</string>
</resources>