<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="memberDetail"
            type="fi.metropolia.parliamentmembersapp.memberdetail.MemberDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/id_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:contentDescription="@string/hetekaid_icon" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="293dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:text="@string/seat_number"
            app:layout_constraintEnd_toEndOf="@+id/textView_party"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_party"
            app:layout_constraintTop_toBottomOf="@+id/textView_heteka_id" />

        <TextView
            android:id="@+id/textView_seat_number"
            android:layout_width="293dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center|start"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:text="123" />

        <TextView
            android:id="@+id/textView_heteka_id"
            android:layout_width="293dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center|start"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="123" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="293dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:text="@string/heteka_id"
            app:layout_constraintStart_toStartOf="@+id/textView_party"
            app:layout_constraintTop_toBottomOf="@+id/textView_party" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/main_photo_image"
            android:layout_width="237dp"
            android:layout_height="208dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@tools:sample/avatars" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/main_party_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/main_photo_image"
            app:layout_constraintEnd_toEndOf="@+id/main_photo_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/main_photo_image"
            app:layout_constraintTop_toTopOf="@+id/main_photo_image"
            app:layout_constraintVertical_bias="1.0"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/thumbs_down"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerInside"
            android:src="@drawable/thumbs_down"
            app:layout_constraintBottom_toBottomOf="@+id/main_photo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/main_photo_image"
            app:layout_constraintTop_toTopOf="@+id/main_photo_image"
            app:tint="@color/red"
            android:contentDescription="@string/thumbs_down_icon" />

        <ImageButton
            android:id="@+id/thumbs_up"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="264dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerInside"
            android:src="@drawable/thumbs_up"
            app:layout_constraintBottom_toBottomOf="@+id/main_photo_image"
            app:layout_constraintEnd_toStartOf="@+id/thumbs_down"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_photo_image"
            app:tint="@color/green"
            android:contentDescription="@string/thumbs_up_icon" />

        <TextView
            android:id="@+id/thumbs_up_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/thumbs_up"
            app:layout_constraintStart_toStartOf="@+id/thumbs_up"
            app:layout_constraintTop_toTopOf="@+id/thumbs_up"
            app:layout_constraintVertical_bias="0.612"
            tools:text="123" />

        <TextView
            android:id="@+id/thumbs_down_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:textColor="@color/red"
            android:textDirection="rtl"
            app:layout_constraintBottom_toBottomOf="@+id/thumbs_down"
            app:layout_constraintEnd_toEndOf="@+id/thumbs_down"
            app:layout_constraintTop_toTopOf="@+id/thumbs_down"
            app:layout_constraintVertical_bias="0.612"
            tools:text="123" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/main_photo_image"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/main_photo_image"
            app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
            tools:text="Name Example" />

        <TextView
            android:id="@+id/textView_party"
            android:layout_width="293dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:gravity="center|start"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="Party example" />

        <View
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:background="@color/silver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_party"
            app:layout_constraintVertical_bias="0.02">
        </View>

        <View
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:background="@color/silver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_heteka_id"
            app:layout_constraintVertical_bias="0.02">
        </View>

        <View
            android:id="@+id/view"
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:background="@color/silver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_seat_number"
            app:layout_constraintVertical_bias="0.02">
        </View>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="293dp"
            android:layout_height="20dp"
            android:gravity="top"
            android:text="@string/party"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView_party"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_party"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/party_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/party_icon" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/seat_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/seat_number_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_comments"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit_comment"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/filledTextField"
            app:layout_constraintStart_toStartOf="@+id/filledTextField"
            app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

        <Button
            android:id="@+id/button_show_comments"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/show_my_recent_comments"
            app:layout_constraintEnd_toEndOf="@+id/button_submit_comment"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_submit_comment"
            app:layout_constraintTop_toBottomOf="@+id/button_submit_comment" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>